--- a/Poke V.2/css/reset.css
+++ b/Poke V.2/css/reset.css
@@ -1,3 +1,135 @@
-:root{
-    
+@import url("https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap");
+
+/* <uniquifier>: Use a uniquifier for the class name */
+/* <weight>: Use a value from 300 to 900 */
+
+.rubik {
+  font-family: "Rubik", sans-serif;
+  font-optical-sizing: auto;
 }
+
+:root {
+  --clr-black: #1c1c1c;
+  --clr-gray: #ececec;
+  --clr-white: #f7f7f7;
+
+  --type-normal: #a8a878;
+  --type-fire: #f08030;
+  --type-water: #6890f0;
+  --type-grass: #78c850;
+  --type-electric: #f8d030;
+  --type-ice: #98d8d8;
+  --type-fighting: #c03028;
+  --type-poison: #a040a0;
+  --type-ground: #e0c068;
+  --type-flying: #a890f0;
+  --type-psychic: #f85888;
+  --type-bug: #a8b820;
+  --type-rock: #b8a038;
+  --type-ghost: #705898;
+  --type-dark: #705848;
+  --type-dragon: #7038f8;
+  --type-steel: #b8b8d0;
+  --type-fairy: #f0b6bc;
+}
+
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    color: var(--clr-black);
+    font-family: "Rubik", sans-serif;
+}
+
+ul{
+    list-style: none;
+}
+
+
+button{
+    background-color: transparent;
+    border: 0;
+    border-radius: 0;
+}
+
+body{
+    min-height: 100vh;
+    background-color: var(--clr-gray);
+}
+
+
+
+.normal{
+    background-color: var(--clr-black);
+    color: var(--clr-white);
+}
+.fire{
+    background-color: var(--type-fire);
+    color: var(--clr-white);
+}
+.water{
+    background-color: var(--type-water);
+    color: var(--clr-white);
+}
+.grass{
+    background-color: var(--type-grass);
+    color: var(--clr-white);
+}
+.electric{
+    background-color: var(--type-electric);
+    color: var(--clr-white);
+}
+.ice{
+    background-color: var(--type-ice);
+    color: var(--clr-white);
+}
+.fighting{
+    background-color: var(--type-fighting);
+    color: var(--clr-white);
+}
+.poison{
+    background-color: var(--type-poison);
+    color: var(--clr-black);
+}
+.ground{
+    background-color: var(--type-ground);
+    color: var(--clr-white);
+}
+.flying{
+    background-color: var(--type-flying);
+    color: var(--clr-white);
+}
+.psychic{
+    background-color: var(--type-psychic);
+    color: var(--clr-white);
+}
+.bug{
+    background-color: var(--type-bug);
+    color: var(--clr-white);
+}
+.rock{
+    background-color: var(--type-rock);
+    color: var(--clr-white);
+}
+.ghost{
+    background-color: var(--type-ghost);
+    color: var(--clr-white);
+}
+.dark{
+    background-color: var(--type-dark);
+    color: var(--clr-white);
+}
+.dragon{
+    background-color: var(--type-dragon);
+    color: var(--clr-white);
+}
+.steel{
+    background-color: var(--type-steel);
+    color: var(--clr-white);
+}
+.fairy{
+    background-color: var(--type-fairy);
+    color: var(--clr-white);
+}
+
