--- a/tablaposiciones/style.css
+++ b/tablaposiciones/style.css
@@ -9,18 +9,24 @@ body{
     width: 100%;
     height: 100vh;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
+    flex-direction: column;
+    background: grey;
 
 }
 
+h1{
+    color: white;
+}
 
 .contenedor{
     width:600px;
     min-height: 400px;
     height: auto;
-    background: grey;
+    background: rgb(255, 255, 255);
     padding: 40px 40PX;
+    border: 2px solid white;
 
 }
 
@@ -52,3 +58,91 @@ body{
 .imagen img{
     width: 100%;
 }
+
+
+
+
+
+
+/* efferc */
+
+.jugador {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 15px;
+    margin: 10px 0;
+    background-color: #f8f9fa;
+    border-radius: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    border: 2px solid transparent;
+    position: relative;
+    overflow: hidden;
+    z-index: 1;
+  }
+  
+  .jugador::before {
+    content: '';
+    position: absolute;
+    top: -50%;
+    left: -50%;
+    width: 200%;
+    height: 200%;
+    background: linear-gradient(45deg, #ff6ec4, #7873f5, #4ecdc4, #ff6ec4);
+    background-size: 400% 400%;
+    z-index: -1;
+    animation: gradientAnimation 10s ease infinite;
+    transition: opacity 0.5s;
+  }
+  
+  .jugador:hover::before {
+    opacity: 1;
+  }
+  
+  @keyframes gradientAnimation {
+    0% {
+      background-position: 0% 50%;
+    }
+    50% {
+      background-position: 100% 50%;
+    }
+    100% {
+      background-position: 0% 50%;
+    }
+  }
+  
+  .jugador .posicion,
+  .jugador .puntaje {
+    font-size: 24px;
+    font-weight: bold;
+    color: #333;
+  }
+  
+  .jugador .imagen img {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    object-fit: cover;
+  }
+  
+  .jugador .nombre h2 {
+    font-size: 20px;
+    margin: 0;
+    color: #555;
+  }
+  
+  /* Opcional: Agregar un efecto de sombra al pasar el ratón sobre la card */
+  .jugador:hover {
+    box-shadow: 0 8px 12px rgba(211, 201, 3, 0.52);
+    cursor: pointer;
+    transform: scale(1.05);
+    transition: all 0.3s; 
+  }
+  
+
+
+
+
+
+
+  
