--- a/IU/animation/style.css
+++ b/IU/animation/style.css
@@ -9,39 +9,45 @@ Body {
   background: #043247;
 }
 
-button {
-  background: #f9a826;
-  color: #043247;
-  border: none;
-  padding: 10px 20px;
-  font-size: 1.2rem;
-  cursor: pointer;
-  border-radius: 5px;
-  margin: 10px;
-  transition: 0.3s;
-}
-
-img:hover {
-  /* filter: grayscale(100%) brightness(80%) contrast(120%) blur(2px) sepia(30%); */
-  /* filter: invert(100%); */
-  /* filter: drop-shadow(10px 10px 5px rgba(202, 122, 9, 0.833)); */
-}
-
 .esenario {
-  min-width: 1200px;
-  max-width: 1920px;
-  max-height: 1100px;
-  height: 100vh;
+  /* min-width: 1000px; */
+  /* max-height: 1100px; */
+  width: 1300px;
+  height: 550px;
 
+  border: 1px solid red;
   margin: 0 auto;
 
   background-image: url("../img/BG.png");
   background-size: cover;
+  background-repeat: no-repeat;
+  background-position: 0px -130px;
   position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
 }
+
+.esenario__left {
+  width: 50%;
+  min-width: 750px;
+  border: 3px solid rgb(0, 67, 252);
+  height: 100%;
+  position: relative;
+}
+
+.esenario_right {
+  width: 50%;
+  min-width: 750px;
+  /* border: 3px solid rgb(255, 0, 0); */
+  position: relative;
+  height: 100%;
+}
+
+
+
+
+
 
 .personaje {
   position: relative;
@@ -98,21 +104,7 @@ img:hover {
   border-radius: 50%;
 }
 
-.esenario__left {
-  width: 50%;
-  min-width: 750px;
-  /* border: 3px solid rgb(0, 67, 252); */
-  height: 100%;
-  position: relative;
-}
 
-.esenario_right {
-  width: 50%;
-  min-width: 750px;
-  /* border: 3px solid rgb(255, 0, 0); */
-  position: relative;
-  height: 100%;
-}
 
 .p1 {
   position: absolute;
@@ -164,7 +156,7 @@ img:hover {
   left: 100px;
 }
 
-@media (max-width: 1600px) {
+/* @media (max-width: 1600px) {
   .esenario {
     background-position: -200px;
   }
@@ -178,4 +170,4 @@ img:hover {
   .esenario {
     background-position: -300px;
   }
-}
+} */
