--- a/IU/animation/style.css
+++ b/IU/animation/style.css
@@ -42,9 +42,28 @@ body {
   border: 3px solid rgb(255, 0, 0);
   position: relative;
   height: 100%;
+} 
+
+.esenario__left .poderes {
+  border:  1px solid green;
+  width: 100px;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
 }
 
 
+.esenario__left .poderes button {
+  width: 50px;
+  height: 50px;
+  background: #fff;
+  border: none;
+  border-radius: 50%;
+  cursor: pointer;
+  transition: 0.3s;
+} 
 
 
 
