--- a/IU/animation/style.css
+++ b/IU/animation/style.css
@@ -15,7 +15,7 @@ body {
   /* min-width: 1000px; */
   /* max-height: 1100px; */
   width: 1300px;
-  height: 550px;
+  height: 610px;
 
   border: 1px solid red;
   margin: 0 auto;
@@ -32,14 +32,14 @@ body {
 
 .esenario__left {
   width: 50%;
-  border: 3px solid rgb(0, 67, 252);
+  /* border: 3px solid rgb(0, 67, 252); */
   height: 100%;
   position: relative;
 }
 
 .esenario_right {
   width: 50%;
-  border: 3px solid rgb(255, 0, 0);
+  /* border: 3px solid rgb(255, 0, 0); */
   position: relative;
   height: 100%;
 } 
@@ -128,40 +128,40 @@ body {
 
 .p1 {
   position: absolute;
-  top: 350px;
-  left: 250px;
+  top: 420px;
+  left: 350px;
 }
 
 .p2 {
   position: absolute;
-  top: 240px;
+  top: 300px;
   left: 320px;
 }
 
 .p3 {
   position: absolute;
-  top: 150px;
+  top: 200px;
   left: 400px;
 }
 
 .p4 {
   position: absolute;
 
-  top: 350px;
+  top: 420px;
   left: -50px;
 }
 
 .p5 {
   position: absolute;
 
-  top: 250px;
+  top: 300px;
   left: -100px;
 }
 
 .p6 {
   position: absolute;
 
-  top: 150px;
+  top: 180px;
   left: -130px;
 }
 
@@ -191,3 +191,53 @@ body {
     background-position: -300px;
   }
 } */
+
+
+.backGround{
+  width: 900px;
+  height:325px;
+  position: absolute;
+  /* border: 2px solid black ; */
+  top: 0;
+  overflow: hidden;
+  display: flex;
+
+
+  .poderes{
+    width: 55%;
+    height: 100%;
+    /* border: 2px solid red; */
+    
+  }
+  
+  
+  .imagen{
+    width: 45%;
+    height: 100%;
+    /* border: 2px solid rgb(31, 207, 60); */
+
+    img{
+      width: 100%;
+      height: 100%;
+      opacity: 0.7;
+      animation: slideAnimation 70s linear infinite;
+    }
+
+  }
+}
+
+
+@keyframes slideAnimation {
+  0% {
+    transform: translateX(0%);
+  }
+
+  50% {
+    transform: translateX(-30%);
+  }
+ 
+  100% {
+    transform: translateX(-0%);
+  }
+}
+
