--- a/IU/animation/style.css
+++ b/IU/animation/style.css
@@ -25,260 +25,267 @@ body {
   justify-content: center;
   align-items: center;
 
-    .esenario__left {
-      width: 50%;
-      /* border: 3px solid rgb(0, 67, 252); */
-      height: 100%;
-      position: relative;
-    
-      .informacion_left{
-        width: 200px;
-        height: 250px;
-        border: 1px solid black;
-        position: absolute;
-        top: 300px;
-        left: 50px;
-        background: whitesmoke;
-        border-radius: 14px;
-        opacity: 0;
-      }
-
-      .personaje_Secundario {
-        position: relative;
-        right: 100px;
-        width: 200px;
-      }
-    }
-    
-    .esenario_right {
-      width: 50%;
-      /* border: 3px solid rgb(255, 0, 0); */
-      position: relative;
-      height: 100%;
-    
-      .informacion_right{
-        width: 200px;
-        height: 250px;
-        border: 1px solid black;
-        position: absolute;
-        top: 300px;
-        right: 60px;
-        background: whitesmoke;
-        border-radius: 14px;
-        opacity: 0;
-    
-    
-      }
-    } 
-}
-
-
-
-
-.personaje {
-  position: relative;
-  /* border: 1px solid red; */
-  width: 450px;
-  display: flex;
-
-    img {
-      width: 95%;
-      filter: blur(1.2px);
-      filter: blur(1px);
-      cursor: pointer;
-      border: 1px solid black;
-    }
-}
-
-.personaje_Principal {
-  width: 50%;
-}
-
-.personaje_Secundario {
-  width: 50%;
-  /* border: 1px solid black; */
-}
-
-
-
-.shadow_left {
-  position: absolute;
-  bottom: 0;
-  left: 30%;
-  transform: translateX(-50%) rotateX(75deg);
-  width: 120px; /* ajusta para el tamaño de la sombra */
-  height: 75px; /* la mitad del ancho para mantener proporción */
-  background: radial-gradient(ellipse at center,rgba(0, 0, 0, 0.63),transparent);
-  background: radial-gradient(ellipse at center,rgba(0, 0, 0, 0.6),transparent 70%);
-  border-radius: 50%;
-  /* border: 10px solid goldenrod; */
-}
-
-.shadow_right {
-  position: absolute;
-  bottom: 0;
-  left: 80%;
-  transform: translateX(-50%) rotateX(75deg);
-  width: 120px; /* ajusta para el tamaño de la sombra */
-  height: 75px; /* la mitad del ancho para mantener proporción */
-  background: radial-gradient(
-    ellipse at center,
-    rgba(0, 0, 0, 0.63),
-    transparent
-  );
-  background: radial-gradient(
-    ellipse at center,
-    rgba(0, 0, 0, 0.6),
-    transparent 70%
-  );
-  border-radius: 50%;
-}
-
-
-
-.p1 {
-  position: absolute;
-  top: 420px;
-  left: 350px;
-}
-
-.p2 {
-  position: absolute;
-  top: 300px;
-  left: 320px;
-}
-
-.p3 {
-  position: absolute;
-  top: 200px;
-  left: 400px;
-}
-
-.p4 {
-  position: absolute;
-
-  top: 420px;
-  left: -50px;
-}
-
-.p5 {
-  position: absolute;
-
-  top: 300px;
-  left: -100px;
-}
-
-.p6 {
-  position: absolute;
-
-  top: 180px;
-  left: -130px;
-}
-
-.esenario__left 
-
-.esenario_right .personaje_Secundario {
-  position: relative;
-  left: 100px;
-}
-
-
-.backGround{
-  width: 900px;
-  height:325px;
-  position: absolute;
-  /* border: 2px solid black ; */
-  top: 0;
-  overflow: hidden;
-  display: flex;
-
-
-  .poderes{
-    width: 55%;
-    height: 100%;
-    /* border: 2px solid red; */
+  .backGround{
+    width: 900px;
+    height:325px;
+    position: absolute;
+    /* border: 2px solid black ; */
+    top: 0;
+    overflow: hidden;
     display: flex;
-    justify-content: space-around;
-    align-items: center;
-
-    div{
-      width: 150px;
-      height: 200px;
-      /* border: 2px solid blue; */
-
+  
+  
+    .poderes{
+      width: 55%;
+      height: 100%;
+      /* border: 2px solid red; */
+      display: flex;
+      justify-content: center;
+      align-items: start;
+  
+      div{
+        width: 150px;
+        height: 200px;
+        /* border: 2px solid blue; */
+        margin: 10px 5px 0 10px ;
+        z-index: 1;
+        cursor: pointer;
+  
+        img{
+          width: 100%;
+          height: 100%;
+          opacity: 0.8;
+        }
+      }
+      
+    }
+    
+    
+    .imagen{
+      width: 45%;
+      height: 100%;
+      /* border: 2px solid rgb(31, 207, 60); */
+  
       img{
         width: 100%;
         height: 100%;
-        opacity: 0.8;
+        opacity: 0.7;
+        animation: slideAnimation 50s linear infinite;
       }
+  
     }
+  }
+  
+
+ 
+}
+
+
+.esenario__left {
+  width: 50%;
+  /* border: 3px solid rgb(0, 67, 252); */
+  height: 100%;
+  position: relative;
+
+  .informacion_left{
+    width: 200px;
+    height: 250px;
+    border: 1px solid black;
+    position: absolute;
+    top: 300px;
+    left: 50px;
+    background: whitesmoke;
+    border-radius: 14px;
+    opacity: 0;
+  }
+
+  
+  .personaje {
+    position: relative;
+    width: 350px;
+    display: flex;
+
+      img {
+        width: 100%;
+        filter: blur(1.2px);
+        filter: blur(1px);
+        cursor: pointer;
+        /* border: 1px solid black; */
+      }
+  }
+
+  .personaje_Principal {
+    /* border: 1px solid #c41010; */
+    width: 150px;
+    height: 150px;
+    cursor: pointer;
+
     
+
+
+    .shadow_left {
+      position: absolute;
+      bottom: 0;
+      left: 100px;
+      transform: translateX(-50%) rotateX(75deg);
+      width: 120px; /* ajusta para el tamaño de la sombra */
+      height: 75px; /* la mitad del ancho para mantener proporción */
+      background: radial-gradient(
+        ellipse at center,
+        rgba(0, 0, 0, 0.63),
+        transparent
+      );
+      background: radial-gradient(
+        ellipse at center,
+        rgba(0, 0, 0, 0.6),
+        transparent 70%
+      );
+      border-radius: 50%;
+  }
+  }
+  .personaje_Secundario {
+    /* border: 1px solid #c41010; */
+    width: 180px;
+    height: 180px;
+    position: relative;
+    right: 100px;
+    display: none;
+  }
+
+
+  
+
+  .p1 {
+    position: absolute;
+    top: 450px;
+    left: 350px;
+  }
+  
+  .p2 {
+    position: absolute;
+    top: 300px;
+    left: 320px;
+  }
+  
+  .p3 {
+    position: absolute;
+    top: 200px;
+    left: 450px;
+  }
+}
+
+.esenario_right {
+  width: 50%;
+  /* border: 3px solid rgb(255, 0, 0); */
+  position: relative;
+  height: 100%;
+
+  .informacion_right{
+    width: 200px;
+    height: 250px;
+    /* border: 1px solid black; */
+    position: absolute;
+    top: 300px;
+    right: 60px;
+    background: whitesmoke;
+    border-radius: 14px;
+    opacity: 0;
+
+
+  }
+
+  
+  .personaje {
+    position: relative;
+    width: 400px;
+    display: flex;
+
+      img {
+        width: 100%;
+        filter: blur(1.2px);
+        cursor: pointer;
+        /* border: 1px solid black; */
+      }
+  }
+
+  .personaje_Principal {
+    /* border: 1px solid #1397b9; */
+    width: 150px;
   }
   
   
-  .imagen{
-    width: 45%;
-    height: 100%;
-    /* border: 2px solid rgb(31, 207, 60); */
+  .personaje_Secundario {
+    width: 200px;
+    /* border: 1px solid #c41010; */
+    position: relative;
+    left: 100px;
 
     img{
       width: 100%;
-      height: 100%;
-      opacity: 0.7;
-      animation: slideAnimation 50s linear infinite;
+      filter: blur(1.2px);
     }
 
   }
+
+  
+  .p4 {
+    position: absolute;
+
+    top: 450px;
+    left: -50px;
+  }
+
+  .p5 {
+    position: absolute;
+
+    top: 300px;
+    left: -0px;
+  }
+
+  .p6 {
+    position: absolute;
+
+    top: 200px;
+    left: -100px;
+  }
+
+  
+  .shadow_right {
+    position: absolute;
+    bottom: 0;
+    left: 80%;
+    transform: translateX(-50%) rotateX(75deg);
+    width: 120px; /* ajusta para el tamaño de la sombra */
+    height: 75px; /* la mitad del ancho para mantener proporción */
+    background: radial-gradient(
+      ellipse at center,
+      rgba(0, 0, 0, 0.63),
+      transparent
+    );
+    background: radial-gradient(
+      ellipse at center,
+      rgba(0, 0, 0, 0.6),
+      transparent 70%
+    );
+    border-radius: 50%;
 }
 
-
-@keyframes slideAnimation {
-  0% {
-    transform: translateX(0%);
-  }
-
-  50% {
-    transform: translateX(-18%);
-  }
- 
-  100% {
-    transform: translateX(-0%);
-  }
-}
-
-
-
-
-.parpadeo{
-  animation: parpadeo 0.2s  forwards;
 } 
 
-@keyframes parpadeo{
-  0%{
-    opacity: 1;
-  }
-
-  25%{
-    opacity: 0.5;
-  }
-
-  50%{
-    opacity: 1;
-  }
-
-  75%{
-    opacity: 0.5;
-  }
-
-  100%{
-    opacity: 0.8;
-  }
-}
 
 
 
 
-.prueba{
-  width: 300px;
-  height: 450px;
-}
+
+
+
+
+
+
+
+
+
+
+
+
+
