--- a/IU/css/style.css
+++ b/IU/css/style.css
@@ -92,7 +92,7 @@ body {
     height: 250px;
     border: 1px solid black;
     position: absolute;
-    top: 300px;
+    top: 200px;
     left: 50px;
     background: whitesmoke;
     border-radius: 14px;
@@ -119,7 +119,7 @@ body {
     width: 150px;
     height: 150px;
     cursor: pointer;
-
+    z-index: 22;
     
 
 
@@ -148,8 +148,15 @@ body {
     width: 180px;
     height: 180px;
     position: relative;
-    right: 100px;
-    display: none;
+    right: 70px;
+    z-index: 10;
+
+    img{
+      position: relative;
+      top: -30px;
+      width: 120%;
+      filter: blur(1.2px);
+    }
   }
 
 
@@ -185,7 +192,7 @@ body {
     height: 250px;
     /* border: 1px solid black; */
     position: absolute;
-    top: 300px;
+    top: 200px;
     right: 60px;
     background: whitesmoke;
     border-radius: 14px;
@@ -271,15 +278,6 @@ body {
 }
 
 } 
-
-
-
-
-
-
-
-
-
 
 
 
