--- a/IU/css/style.css
+++ b/IU/css/style.css
@@ -24,6 +24,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
 
   .backGround{
     width: 900px;
@@ -69,7 +70,7 @@ body {
       img{
         width: 100%;
         height: 100%;
-        opacity: 0.7;
+        opacity: 0.5;
         animation: slideAnimation 50s linear infinite;
       }
   
@@ -283,6 +284,20 @@ body {
 
 
 
+
+.snow{
+  position: absolute;
+  top: 0;
+  left: 0;
+  mix-blend-mode: screen;
+
+  video{
+    width: 100%;
+    object-fit: cover;
+  }
+  
+
+}
 
 
 
