--- a/IU/css/style.css
+++ b/IU/css/style.css
@@ -333,5 +333,12 @@ body {
     }
  }
 
+ .boton_activo{
+  background: #09586b;
+  cursor: pointer;
+  transform: scale(1.03);
+  border: 2px solid goldenrod;
+ }
+
 
 }
