--- a/IU/css/style.css
+++ b/IU/css/style.css
@@ -342,3 +342,22 @@ body {
 
 
 }
+
+
+.turno{
+  border: 2px solid goldenrod;
+  position: absolute;
+  width: 50px;
+  height: 50px;
+  top: -10px;
+  background: black;
+  border-radius: 20px 20px 60px 50px;
+}
+
+.turno_izquierda{
+  left: 45px;
+}
+
+.turno_derecha{
+left: 250px;
+}
