--- a/IU/css/style.css
+++ b/IU/css/style.css
@@ -352,6 +352,7 @@ body {
   top: -10px;
   background: black;
   border-radius: 20px 20px 60px 50px;
+  opacity: 0.8;
 }
 
 .turno_izquierda{
@@ -362,7 +363,3 @@ body {
 left: 250px;
 }
 
-.turno_actual{
-  background: goldenrod;
-  border: 2px solid black;
-}
