--- a/RPG Battle Game/css/style.css
+++ b/RPG Battle Game/css/style.css
@@ -13,14 +13,14 @@ body {
 }
 
 .esenario {
-  width: 1300px;
+  width: 1400px;
   height: 610px;
   border: 1px solid red;
   margin: 0 auto;
   background-image: url("../img/BG.png");
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: 0px -130px;
+  background-position: 0px -170px;
   position: relative;
   display: flex;
   justify-content: center;
@@ -83,269 +83,6 @@ body {
 }
 
 
-.esenario__left {
-  width: 50%;
-  /* border: 3px solid rgb(0, 67, 252); */
-  height: 100%;
-  position: relative;
-
-  .informacion_left{
-    width: 240px;
-    height: 70%;
-    /* border: 5px solid rgb(5, 185, 59); */
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-
-    .cartas_Info{
-      width: 100%;
-      border: 1px solid black;
-      height: 100px;
-      background: gray;
-      opacity: 0.8;
-      display: flex;
-      transform: translateZ();
-
-
-      .avatar{
-        width: 100px;
-        height: 100px;
-        border: 1px solid black;
-
-        img{
-          width: 100%;
-        }
-      }
-
-      .estadisticas{
-        padding: 10px;
-        width: 140px;
-        border: 1px solid black;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-evenly;
-        /* align-items: center; */
-      }
-    }
-  }
-
-  
-  .personaje {
-    position: relative;
-    width: 350px;
-    display: flex;
-
-      img {
-        width: 100%;
-        filter: blur(1.2px);
-        filter: blur(1px);
-        cursor: pointer;
-        /* border: 1px solid black; */
-      }
-  }
-
-  .personaje_Principal {
-    /* border: 1px solid #c41010; */
-    width: 150px;
-    height: 150px;
-    cursor: pointer;
-    z-index: 22;
-    
-
-
-    .shadow_left {
-      position: absolute;
-      bottom: 0;
-      left: 100px;
-      transform: translateX(-50%) rotateX(75deg);
-      width: 120px; /* ajusta para el tamaño de la sombra */
-      height: 75px; /* la mitad del ancho para mantener proporción */
-      background: radial-gradient(
-        ellipse at center,
-        rgba(0, 0, 0, 0.63),
-        transparent
-      );
-      background: radial-gradient(
-        ellipse at center,
-        rgba(0, 0, 0, 0.6),
-        transparent 70%
-      );
-      border-radius: 50%;
-  }
-  }
-  .personaje_Secundario {
-    /* border: 1px solid #c41010; */
-    width: 180px;
-    height: 180px;
-    position: relative;
-    right: 70px;
-    z-index: 10;
-
-    img{
-      position: relative;
-      top: -30px;
-      width: 120%;
-      filter: blur(1.2px);
-    }
-  }
-
-
-  
-
-  .p1 {
-    position: absolute;
-    top: 460px;
-    left: 390px;
-  }
-  
-  .p2 {
-    position: absolute;
-    top: 285px;
-    left: 320px;
-  }
-  
-  .p3 {
-    position: absolute;
-    top: 180px;
-    left: 430px;
-  }
-}
-
-.esenario_right {
-  width: 50%;
-  /* border: 3px solid rgb(255, 0, 0); */
-  position: relative;
-  height: 100%;
-
-  .informacion_right{
-    width: 240px;
-    height: 70%;
-    /* border: 5px solid rgb(5, 185, 59); */
-    position: absolute;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-
-    position: absolute;
-    top: 0px;
-    right: 0px;
-
-    .cartas_Info{
-      width: 100%;
-      border: 1px solid black;
-      height: 100px;
-      background: gray;
-      opacity: 0.8;
-      display: flex;
-      transform: translateZ();
-
-
-      .avatar{
-        width: 100px;
-        height: 100px;
-        border: 1px solid black;
-
-        img{
-          width: 100%;
-        }
-      }
-
-      .estadisticas{
-        padding: 10px;
-        width: 130px;
-        border: 1px solid black;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-evenly;
-        /* align-items: center; */
-      }
-    }
-
-
-  }
-
-  
-  .personaje {
-    position: relative;
-    width: 400px;
-    display: flex;
-
-      img {
-        width: 100%;
-        filter: blur(1.2px);
-        cursor: pointer;
-        /* border: 1px solid black; */
-      }
-  }
-
-  .personaje_Principal {
-    /* border: 1px solid #1397b9; */
-    width: 150px;
-  }
-  
-  
-  .personaje_Secundario {
-    width: 200px;
-    /* border: 1px solid #c41010; */
-    position: relative;
-    left: 100px;
-
-    img{
-      width: 100%;
-      filter: blur(1.2px);
-    }
-
-  }
-
-  
-  .p4 {
-    position: absolute;
-
-    top: 450px;
-    left: -100px;
-  }
-
-  .p5 {
-    position: absolute;
-
-    top: 300px;
-    left: -50px;
-  }
-
-  .p6 {
-    position: absolute;
-
-    top: 190px;
-    left: -120px;
-  }
-
-  
-  .shadow_right {
-    position: absolute;
-    bottom: 0;
-    left: 80%;
-    transform: translateX(-50%) rotateX(75deg);
-    width: 120px; /* ajusta para el tamaño de la sombra */
-    height: 75px; /* la mitad del ancho para mantener proporción */
-    background: radial-gradient(
-      ellipse at center,
-      rgba(0, 0, 0, 0.63),
-      transparent
-    );
-    background: radial-gradient(
-      ellipse at center,
-      rgba(0, 0, 0, 0.6),
-      transparent 70%
-    );
-    border-radius: 50%;
-}
-
-} 
-
-
 
 .snow{
   position: absolute;
@@ -360,6 +97,8 @@ body {
   
 
 }
+
+
 .thunder{
   position: absolute;
   top: 0;
@@ -383,38 +122,58 @@ body {
 
 
 .informacion{
-  width: 50%;
-  margin: 10px auto;
-  height: 400px;
+  width: 10%;
+  position: absolute;
+  top: 10px;
+  left: 20px;
   background: whitesmoke;
   display: flex;
-  padding: 50px;
+  padding: 10px;
   justify-content: space-evenly;
+  flex-direction: column;
   align-items: center;
+  opacity: 0.8;
+
+  .imagen_personaje{
+    width: 100px;
+    height: 100px;
+    border: 1px solid black;
+
+    img{
+      width: 100%;
+    }
+  }
 
   .habilidades{
     display: flex;
     flex-direction: column;
-    height: 100%;
     margin: 10px;
+    border: 1px solid black;
   }
-
+  
   .stats{
+    width: 80%;
+    border: 1px solid rgb(49, 134, 213);
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
+    font-size: 12px;
+    margin-top: 15px;
   }
 
   button{
-    width: 250px;
-    height: 100px;
+    width: 80px;
+    height: 80px;
     border: none;
     background:#043247;
-    border-radius: 12px;
+    border-radius: 50%;
     color: white;
-    font-size: 20px;
+    font-size: 15px;
     margin: 5px;
+
+    img{
+      width: 100%;
+    }
 
     &:hover{
       background: #09586b;
@@ -427,6 +186,7 @@ body {
 
   .boton_activo{
     background: #09586b;
+    overflow: hidden;
     cursor: pointer;
     transform: scale(1.03);
     border: 7px solid goldenrod;
