--- a/RPG Battle Game/css/style.css
+++ b/RPG Battle Game/css/style.css
@@ -123,21 +123,25 @@ body {
 
 
 .turno{
-  border: 2px solid goldenrod;
+  /* border-bottom: 2px solid goldenrod; */
   position: absolute;
-  width: 30px;
-  height: 20px;
-  top: 15px;
-  background: black;
-  border-radius: 20px 20px 60px 50px;
+  width: 70px;
+  height: 60px;
+  top: -50px;
   opacity: 0.8;
+  z-index: 100;
+  /* border-radius: 20px 20px 60px 50px; */
+
+  img{
+    width: 100%;
+  }
 }
 
 .turno_izquierda{
-  left: 45px;
+  left: 25px;
 }
 
 .turno_derecha{
-left: 250px;
+left: 380px;
 }
 
