--- a/RPG Battle Game/css/seleccion.css
+++ b/RPG Battle Game/css/seleccion.css
@@ -7,6 +7,7 @@
     flex-direction: column;
     align-items: center;
     opacity: 0.8;
+    z-index: 10;
   
     .imagen_personaje{
       width: 100px;
